crates/reinhardt-urls/crates/routers-macros/tests/ui/fail/nested_parameters.stderr
error: Nested parameter at position 8
       Parameters cannot be nested: use {outer} instead of {{inner}}
 --> tests/ui/fail/nested_parameters.rs:5:20
  |
5 |     let _path = path!("/users/{{id}}/");
  |                       ^^^^^^^^^^^^^^^^
